# PowaBonk

./: .clang-format  .clang-tidy  .editorconfig  .gitatributes  .gitignore  .gitmodules  .tokeignore  CMakeLists.txt  Makefile  README.md  main.cpp
.github/scripts/: parser.py
.github/workflows/: cmake.yml
SQL/: connection.sql  search-user.sql  select-by-id.sql
cmake/: Findqt5.cmake
docs/: AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  README.md
github/workflow/: cmake.yml
include/: Login_handler.hpp  SQL_API.hpp  Users.hpp  statement.hpp
resources/: .env.example  env.example  resources.qrc  seed.sql  structure.txt
resources/css/: style.qss
sql/: search-user.sql  select-users.sql
src/: Dashboard.hpp  Login_window.hpp  Pannel_window.hpp
test/: CMakeLists.txt  connection_tests.hpp  hash_tests.hpp  sql_tests.hpp  test_main.hpp  test_sql.hpp  tests_template.hpp  tests_template.hpp.exemple
test/Cmake/: CTestConfig.cmake  test.ctest
test/resources/: resources.qrc  seed.sql
test/resources/css/: style.qss  website.css
utils/DB/: date_file  feeder.py  first_name_file  gen.rb  last_name_file
utils/DB-seeder/: feeder.py  first_name_file  gen.rb  last_name_file  seeder.cpp
utils/data_processor/: collector.rb
